tests/stacks/ibm/application/istio/test_data/expected/~g_v1_configmap_istio-config.yaml
apiVersion: v1
data:
  clusterRbacConfig: "OFF"
  gatewaySelector: ingressgateway
kind: ConfigMap
metadata:
  annotations: {}
  labels: {}
  name: istio-config
  namespace: kubeflow
