tests/stacks/ibm/application/istio/test_data/expected/~g_v1_configmap_istio-parameters-t6hhgfg9k2.yaml
apiVersion: v1
data:
  clusterRbacConfig: "OFF"
  gatewaySelector: ingressgateway
kind: ConfigMap
metadata:
  annotations: {}
  labels: {}
  name: istio-parameters-t6hhgfg9k2
  namespace: kubeflow
